Externalized RestTemplateCustomizer properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-brewery.apiHost=http://localhost:8080
-logging.level.org.apache.http=debug
+brewery.api-host=http://localhost:8080
+logging.level.org.apache.http=info
+
+rest.max-total-connections=100
+rest.default-max-per-route=20
+rest.connection-request-timeout=3000
+rest.socket-timeout=3000
